Fixed event edit window layout issue

--- a/resources/css/calendar.css
+++ b/resources/css/calendar.css
@@ -841,7 +841,6 @@ td.ext-cal-dtitle-today div {
 }
 .ext-cal-event-win .x-window-body .x-form {
     background: transparent;
-    padding: 5px 10px 10px;
 }
 .ext-cal-event-win a:link,
 .ext-cal-event-win a:visited {
